--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						<ul class="icons">
 							<li><a href="https://linkedin.com/in/jyotishman-nath-4a81a7144" target="_blank" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
 							<li><a href="https://github.com/jymnath4/" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Resume</span></a></li>
+							<!--<li><a href="#" class="icon brands fa-instagram"><span class="label">Resume</span></a></li>-->
 							<!--<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>-->
 						</ul>
 					</nav>
